<resources>
    <string name="app_name">VKMD2</string>
    <string name="title">VK Music Player\n&amp; Downloader</string>

    <string name="need_permissions">Для работы приложению необходимо предоставить нужные разрешения!</string>

    <string name="retry">Повторить</string>

    <string name="go">ПОГНАЛИ!</string>
    <string name="sync_text">Введите количество аудиозаписей которые хотите получить. Можно продолжить и без ввода количества</string>
    <string name="sync_progress_text">Пожалуйста, подождите. Идёт получение списка аудиозаписей...</string>

    <string name="navigation_drawer_open">Открыто</string>
    <string name="navigation_drawer_close">Закрыто</string>
    <string name="download_man">Качалка</string>
    <string name="sync">Синхронизация</string>
    <string name="settings">Настройки</string>
    <string name="active_mode_summary">Выполнять авторизацию ВК и синхронизацию аудио при каждом входе в приложение</string>
    <string name="active_mode_title">Активный режим</string>
    <string name="circular_playing_summary">Когда в текущем плейлисте заканчивается воспроизведение текущей аудиозаписи, воспроизведение начинается с первой</string>
    <string name="circular_playing_title">Круговое проигрывание</string>
    <string name="about">O приложении</string>
    <string name="faq">FAQ</string>
    <string name="deauthorize">Деавторизоваться</string>
    <string name="offline_mode">Режим офлайн</string>
    <string name="online_search_label">онлайн поиск</string>

    <string name="audio_search">Поиск по аудиозаписям...</string>
    <string name="selected">Выбрано: </string>

    <string name="download_started_soon">Загрузка скоро начнётся...</string>
    <string name="download_started">Загрузка началась...</string>
    <string name="download_completed">Загрузка закончилась</string>
    <string name="player_loop_enabled">Повтор композиции включен</string>
    <string name="player_loop_disabled">Повтор композиции выключен</string>
    <string name="player_random_enabled">Режим случайного воспроизведения включен</string>
    <string name="player_random_disabled">Режим случайного воспроизведения выключен</string>
    <string name="sync_started">Синхронизация аудио запущена...</string>
    <string name="sync_completed">Синхронизация аудио закончена</string>

    <string name="error_nothing_select">А выбрать то нечего!</string>
    <string name="error_nothing_download">А качать-то нечего!</string>
    <string name="error_text">Произошла ошибка.\nПроверьте соединение с сетью Интернет</string>
    <string name="error_no_connection">При загрузке данных произошла ошибка.\nПроверьте соединение с сетью Интернет</string>
    <string name="error_not_auth_page">Убедитесь, что Вы пытаетесь авторизоваться (Log in)</string>
    <string name="error_download">Возник косячок при загрузке:(</string>
    <string name="error_playing">Произошла ошибка при воспроизведении</string>
    <string name="error_sync">Ошибка синхронизации аудио</string>

    <string name="dialog_title">Внимание</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_continue">Продолжить</string>
    <string name="dialog_about_author">Об авторе</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_close">Выйти</string>
    <string name="dialog_login_title">ВНИМАТЕЛЬНО прочтите текст ниже!</string>
    <string name="dialog_login">Перед началом использования приложения необходимо ввести логин и пароль от учетной записи ВК. Зачем вводить свой логин и пароль? Чтобы приложение смогло получить список аудиозаписей аккаунта.\nЛогин и пароль от учетной записи отправляются непосредственно в ВК, приложение их никуда НЕ сохраняет, НЕ отправляет и НЕ будет делать этого в дальнейшем. Ввод логина и пароля осуществляется один раз.\nАвтор приложения не несёт НИКАКОЙ ответственности за ваш аккаунт!</string>
    <string name="dialog_download">Вы действительно хотите всё это скачать? Оно Вам надо?</string>
    <string name="dialog_sync">Синхронизировать локальную библиотеку аудио с акаунтом ВК?</string>
    <string name="dialog_about">Данное приложение является приложением с открытым и необфусцированным исходным кодом.\nПриложение предназначено для прослушивания и скачивания музыки с ресурса VK.com и создано на добровольных началах для простого рабочего класса на зло буржуйской компании Mail.Ru Group.\nПо вопросам и предложениям обращаться по контактам указанным на сайте автора.\nПриятного пользования!</string>
    <string name="dialog_intro_title">Добро пожаловать!</string>
    <string name="dialog_intro">Это первый запуск приложения и вы получили свои первые 200 аудиозаписей!\nЧтобы получить больше, выполните ручную синхронизацию (Меню -> Синхронизация) с укзанием нужного кол-ва аудиозаписей на вашей странице. Подробнее в FAQ.</string>
    <string name="dialog_update">Новая версия приложения загружена и готова к установке.\nУстановить новую версию приложения?</string>
    <string name="dialog_deauthorize_title">Деавторизация</string>
    <string name="dialog_deauthorize">Файлы cookie будут удалены с устройства и вы будете перенаправлены на экран авторизации.\nВся сохраненная музыка останется на устройстве.\nПродолжить?</string>
    <string name="dialog_exit">Закрыть приложение?</string>

    <!--ВОПРОСЫ/ОТВЕТЫ-->
    <string name="q1">Как скачивать музыку?</string>
    <string name="a1">Для выбора аудиозаписей для скачивания, необходимо нажать на кнопку <b>Выбрать всё</b> или выбрать конкретную аудиозапись, с помощью долгого клика по ней. После этого, на верхней панели появится кнопка скачивания (стрелочка вниз). Жмём на неё и подтверждаем скачивание. Когда скачивание начнётся, в статус баре появится уведомление о скачивании текущей аудиозаписи.\nПросматривать и управлять списком скачивания можно через менеджер закачек (Меню -> Качалка).</string>

    <string name="q2">Куда скачивается музыка?</string>
    <string name="a2">Вся скачанная музыка доступна по пути:\n<b>/Внешняя_Карта_Памяти/VKMD/music/</b>\nПуть скачивания изменить нельзя</string>

    <string name="q3">Что такое режим офлайн?</string>
    <string name="a3">Это режим в котором отображаются только скачанные аудиозаписи. Также, в этом режиме недоступен онлайн поиск</string>

    <string name="q4">Что такое синхронизация?</string>
    <string name="a4">Синхронизация - это процесс получения списка аудиозаписей с аккаунта пользователя, под которым он авторизовался в приложении.\nСинхронизация бывает двух видов: ручная и автоматическая. Автоматическая синхронизация запускается при первом запуске приложения (приложение получает первые 200 аудиозаписей), а также каждые 24 часа, т.к. время жизни ссылок на аудиозаписи ограничено. Ручная синхронизация запускается из меню, либо если включена опция <b>Активный режим</b>.\nПо умолчанию, если не указывать кол-во синхронизируемых аудиозаписей, приложение получает по 200 аудиозаписей. Каждый раз при запуске автоматической синхронизации берется предыдущее значение кол-ва аудиозаписей</string>

    <string name="q5">Что такое деавторизация?</string>
    <string name="a5">Деавторизация - это процесс сброса авторизации в ВК. При этом, вы будете перенаправлены на экран авторизации, а вся сохраненная музыка останется на устройстве.\nТакое может пригодиться, когда необходимо скачать музыку под разными аккаунтами</string>

    <string name="default_notification_channel_id">vkmd2_push_channel</string>



    <string name="fragment_player_error_no_tracks">Не получен трек для воспроизведения</string>
    <string name="fragment_tracklist_error_no_tracks">Не удалось получить список аудиозаписей</string>

</resources>
