<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_offline_mode"
        android:icon="@mipmap/ic_signal_cellular_off_black_24dp"
        android:title="@string/offline_mode"
        app:actionLayout="@layout/navigation_view_offline_mode" />

    <item
        android:id="@+id/menu_sync"
        android:icon="@mipmap/ic_sync_black_24dp"
        android:title="@string/sync" />

    <item
        android:id="@+id/menu_download_man"
        android:icon="@mipmap/ic_file_download_black_24dp"
        android:title="@string/download_man" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/settings" />


    <item
        android:id="@+id/menu_faq"
        android:icon="@mipmap/ic_help_black_24dp"
        android:title="@string/faq" />

    <item
        android:id="@+id/menu_about"
        android:icon="@mipmap/ic_info_black_24dp"
        android:title="@string/about" />

    <item
        android:id="@+id/menu_deauthorize"
        android:icon="@mipmap/exit"
        android:title="@string/deauthorize" />

</menu>
